--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 PyQt5>=5.15.11
 PyQt5-Qt5>=5.15.15
 PyQt5-sip>=12.15.0
+PyQt5-stubs>=5.15.6.0
 Pillow>=9.0.0
 charset-normalizer>=3.0.0
 psutil>=6.1.0
