refactor: complete metadata phase 0 - pre-clean & noise reduction
- Add fonts_rc*.py to ruff exclude patterns (PyQt5 generated files, 100K+ lines)
- Fix W293 whitespace issues in 4 files:
  - oncutf/core/ui_managers/ui_manager.py
  - oncutf/ui/widgets/file_tree_view.py
  - oncutf/ui/widgets/metadata_tree_view.py
  - oncutf/ui/widgets/preview_tables_view.py
- Create metadata refactoring plan document
- All quality gates pass: ruff, mypy (300 files), pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -233,7 +233,9 @@ line-length = 100
 # SAFETY: fix=false by default. Use 'ruff check . --fix' to auto-fix.
 # This prevents unexpected code changes during regular lint checks.
 fix = false
-exclude = ["backups", ".cache", "temp", "reports", "venv", "__pycache__", "*.pyc", "assets", "resources", "logs"]
+# NOTE: fonts_rc*.py are PyQt5 Resource Compiler generated files (100K+ lines)
+# They should not be manually edited or linted.
+exclude = ["backups", ".cache", "temp", "reports", "venv", "__pycache__", "*.pyc", "assets", "resources", "logs", "**/fonts_rc*.py"]
 
 [tool.ruff.lint]
 select = [
