--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,7 +119,6 @@ module = [
     "oncutf.core.selection.*",
     "oncutf.core.database.*",
     "oncutf.core.cache.*",
-    "oncutf.core.metadata.*",
     # Legacy flat modules with Qt issues
     "oncutf.core.signal_coordinator",
     "oncutf.core.utility_manager",
@@ -134,6 +133,21 @@ ignore_errors = true
 # =============================================================================
 # Core modules - GRADUAL STRICTNESS
 # =============================================================================
+
+# Metadata package - STRICT MODE (Phase 3 refactoring 2025-12-21)
+[[tool.mypy.overrides]]
+module = [
+    "oncutf.core.metadata",
+    "oncutf.core.metadata.metadata_cache_service",
+    "oncutf.core.metadata.metadata_writer",
+    "oncutf.core.metadata.metadata_loader",
+    "oncutf.core.metadata.metadata_shortcut_handler",
+    "oncutf.core.metadata.metadata_progress_handler",
+    "oncutf.core.metadata.companion_metadata_handler",
+]
+ignore_errors = false
+warn_return_any = true
+check_untyped_defs = true
 
 # Phase 1: Well-typed modules with strict checking
 [[tool.mypy.overrides]]
