feat: enable strict mypy for services layer
- Add dedicated mypy override for oncutf.services.* with strict checking
- Remove services from ignore_errors=true block
- Fix type hints in cached_hash_service.py:
  - Add PersistentHashCache type annotation
  - Add Callable type hints for progress_callback parameters
  - Use TYPE_CHECKING import for lazy loading
- Use collections.abc.Callable instead of typing.Callable (UP035)

Per Antigravity audit recommendation #2 (High Priority).
All 7 service files now pass strict mypy checks.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -149,6 +149,21 @@ ignore_errors = false
 warn_return_any = true
 check_untyped_defs = true
 
+# Services layer - STRICT MODE (Antigravity recommendation 2025-12-21)
+[[tool.mypy.overrides]]
+module = [
+    "oncutf.services",
+    "oncutf.services.interfaces",
+    "oncutf.services.registry",
+    "oncutf.services.filesystem_service",
+    "oncutf.services.hash_service",
+    "oncutf.services.cached_hash_service",
+    "oncutf.services.exiftool_service",
+]
+ignore_errors = false
+warn_return_any = true
+check_untyped_defs = true
+
 # Phase 1: Well-typed modules with strict checking
 [[tool.mypy.overrides]]
 module = [
@@ -205,9 +220,9 @@ module = [
 ]
 ignore_errors = true
 
-# Controllers, models, modules, services - keep ignored for now
+# Controllers, models, modules - keep ignored for now (services moved to strict)
 [[tool.mypy.overrides]]
-module = ["oncutf.controllers.*", "oncutf.models.*", "oncutf.modules.*", "oncutf.services.*"]
+module = ["oncutf.controllers.*", "oncutf.models.*", "oncutf.modules.*"]
 ignore_errors = true
 
 # =============================================================================
