chore: remove generated fonts_rc files from git tracking
- Add fonts_rc*.py to .gitignore
- Remove fonts_rc.py (104K LOC) and fonts_rc_temp_backup.py (156K LOC)
- Total 260,482 lines of generated code removed from repository
- Files remain locally for runtime; should be generated at build time

Per Antigravity audit recommendation #5 (Medium Priority).

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ __pycache__/
 *.pyd
 *.egg-info/
 
+# PyQt5 Resource Compiler generated files (fonts_rc.py is ~100K+ LOC)
+# These should be generated at build time, not tracked in git
+fonts_rc*.py
+
 # Backup or temp Python files
 *.bak
 *.backup
