feat: add font resource generation script for cross-platform setup
- Add resources/fonts.qrc resource definition file
- Add scripts/generate_fonts_rc.py to generate fonts_rc.py after clone
- Update README.md with generation step in Quick Start
- Update .gitignore to track .qrc files (needed for build)

This enables the repository to work on fresh clones across machines.
Run 'python scripts/generate_fonts_rc.py' after cloning.

--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,8 @@ debug.log
 # GUI-related files (PyQt5, resources)
 # =======================================
 
-*.qrc
+# NOTE: *.qrc files ARE tracked (needed for build)
+# Only the generated _rc.py files are ignored
 *.ui.py
 resources_rc.py
 *.qmlc
