feat: PyInstaller preparation infrastructure and enhanced CI pipeline
- Add external_tools.py module for cross-platform tool detection
  * Support for exiftool and ffmpeg with platform-specific detection
  * Bundled binary fallback with PyInstaller frozen executable support
  * Version detection and graceful feature degradation
  * Supports Windows, macOS (Intel/ARM), and Linux

- Enhance path_utils.py with PyInstaller support
  * Detect frozen executables via sys._MEIPASS
  * Maintain source code path detection as fallback
  * Critical for resource loading in bundled applications

- Add FeatureAvailability class to config.py
  * Runtime feature flags based on external tool detection
  * Enable/disable metadata and video features gracefully
  * Dynamically updated during application initialization

- Create bin/ directory structure for bundled tools
  * Platform-specific subdirectories: bin/windows/, bin/macos/, bin/linux/
  * Comprehensive README with installation and licensing guidance
  * Support for universal binaries on macOS

- Update .gitignore for external tool binaries
  * Ignore platform-specific executables
  * Keep directory structure and documentation tracked

- Create oncutf.spec template for PyInstaller builds
  * Comprehensive spec file with all necessary configurations
  * Platform-specific icon and code signing setup
  * Resource bundling and optimization options
  * Detailed post-build and troubleshooting notes

- Enhance CI/CD pipeline (.github/workflows/tests.yml)
  * Add separate lint job (Ruff)
  * Add separate type-check job (mypy)
  * Expand test matrix to 3 OS × 2 Python versions
  * Platform-specific system dependency installation:
    - Linux: apt-get with X11 libraries + exiftool
    - macOS: brew install exiftool
    - Windows: choco install exiftool
  * Conditional test execution with xvfb for Linux only

- Fix test imports and mocking
  * Update test_tooltip_helper.py to use TooltipHelper class methods
  * Fix test_metadata_validation

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,25 @@ backups/
 *.bak.tar.gz
 
 # =======================================
+# External Tools Binaries
+# =======================================
+
+# Bundled binaries for PyInstaller packaging
+# Keep directory structure but ignore actual binaries
+bin/**/*
+!bin/**/.gitkeep
+!bin/README.md
+
+# Platform-specific binaries
+*.exe
+*.dll
+*.dylib
+*.so
+
+# License files for bundled tools (keep these)
+!bin/LICENSE-*.txt
+
+# =======================================
 #  Test-related folders and outputs
 # =======================================
 
