refactor(controllers): Move UI-specific managers to ui/services
Phase 3: Controllers Cleanup & Delegation

- Move core/dialog_manager.py → ui/services/dialog_manager.py
- Move core/utility_manager.py → ui/services/utility_manager.py
- Create ui/services/ package for UI-specific service layer

Rationale: These managers are UI-specific (depend on Qt widgets, dialogs)
and don't belong in core/. Moving to ui/services/ improves separation
of concerns and clarifies the UI boundary.

Impact:
- Clearer separation: core/ = business logic, ui/ = presentation
- Better testability: UI services can be mocked independently
- Reduced coupling: core/ has fewer UI dependencies

Quality gates passed:
- ruff check . (1 import ordering issue auto-fixed)
- mypy .: Success (327 source files)
- pytest -v: 922/922 passing (6 skipped)

Phase: 3/5 (Controllers Cleanup & Delegation)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -184,8 +184,8 @@ module = [
     "oncutf.main",
     "oncutf.__main__",
     "oncutf.core.signal_coordinator",
-    "oncutf.core.utility_manager",
-    "oncutf.core.dialog_manager",
+    "oncutf.ui.services.utility_manager",
+    "oncutf.ui.services.dialog_manager",
     "oncutf.core.event_handler_manager",
     "oncutf.core.file_load_manager",
     "oncutf.core.modifier_handler"
