refactor: Complete architectural cleanup - behaviors, metadata, and documentation
Major Changes:
- Migration from mixin inheritance to composition-based behaviors
- Metadata loader naming clarity (ExifToolMetadataAdapter)
- Metadata tree consolidation into single package
- Comprehensive naming guidelines documentation
- All broken documentation references fixed

File Structure Changes:
- DELETED: oncutf/ui/mixins/ (7 mixin files → behaviors)
- DELETED: oncutf/ui/utils/ (empty folder with incorrect __all__)
- RENAMED: utils/metadata/loader.py → exiftool_adapter.py
- MOVED: metadata_tree_view.py → metadata_tree/view.py
- MOVED: metadata_worker.py → metadata_tree/worker.py

Behavioral Changes:
- Added 5 missing methods to SelectionBehavior
- Added 7 missing methods to ColumnManagementBehavior
- Updated FileTableView delegation methods
- Test migration: test_column_management_mixin.py → test_column_management_behavior.py

Documentation Updates:
- Added naming decision tree (controllers vs services vs managers)
- Fixed all broken file/folder references in ARCHITECTURE.md
- Updated examples to use composition pattern
- Removed references to deleted docs (cache_strategy.md, ROADMAP.md)

Testing:
- 927 tests passing, 6 skipped
- All imports updated across codebase
- Ruff linting clean
- Application starts successfully

Architecture:
- Two-tier metadata loading (adapter + orchestrator)
- Clear separation: ExifToolMetadataAdapter (I/O) + MetadataLoader (orchestration)
- Composition over inheritance for UI behaviors
- Protocol-based behavior interfaces

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -154,7 +154,7 @@ module = [
     "oncutf.utils.ui.theme_font_generator",
     "oncutf.utils.ui.placeholder_helper",
     "oncutf.utils.ui.combo_popup_helper",
-    "oncutf.utils.metadata.loader"
+    "oncutf.utils.metadata.exiftool_adapter"
 ]
 ignore_errors = false
 disable_error_code = [
