refactor: Split UIManager into 4 specialized controllers
Created oncutf/controllers/ui/ package with:
- WindowSetupController (130 lines): Window sizing, title, icon
- LayoutController (548 lines): Panels, splitters, layout setup
- SignalController (341 lines): Signal connections
- ShortcutController (110 lines): Keyboard shortcuts

UIManager (133 lines) is now a thin delegator for backward compatibility.

Before: 982 lines (monolithic)
After: 1282 lines across 5 modules (better testability, clearer separation)

Quality: 949 tests passed, ruff clean, mypy clean (with overrides)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -188,7 +188,12 @@ module = [
     "oncutf.ui.services.dialog_manager",
     "oncutf.core.event_handler_manager",
     "oncutf.core.file_load_manager",
-    "oncutf.core.modifier_handler"
+    "oncutf.core.modifier_handler",
+    # UI Controllers - heavy dynamic attribute access on MainWindow
+    "oncutf.controllers.ui.layout_controller",
+    "oncutf.controllers.ui.signal_controller",
+    "oncutf.controllers.ui.shortcut_controller",
+    "oncutf.controllers.ui.window_setup_controller"
 ]
 ignore_errors = true
 
