Feat: Integrate node_editor framework - Phase 1 complete
Node Editor Integration for visual rename pipeline building:

1. Copied node_editor portable package to oncutf/ui/widgets/node_editor/
   - 52 built-in nodes (math, logic, string, list, time, etc.)
   - Theme engine with dark/light themes
   - ULID-based serialization for persistent IDs
   - Full undo/redo history support

2. Created oncutf/core/rename_graph/ domain layer (Qt-free):
   - RenameGraph: Graph model with file context for evaluation
   - RenameGraphValidator: Connection rules (single output, DAG, etc.)
   - RenameGraphExecutor: Execute graph to generate filenames

3. Created oncutf/controllers/rename_graph_controller.py:
   - Bridge between node editor UI and rename execution
   - Module-to-graph and graph-to-module conversion (planned)
   - Save/load graph configurations

4. Created oncutf/ui/widgets/node_editor/nodes/rename_nodes/:
   - Placeholder for oncutf-specific nodes (op_codes 200+)

5. Updated all imports from node_editor.* to oncutf.ui.widgets.node_editor.*

6. Added node_editor to mypy Tier 0 (external code, ignore errors)

Next: Phase 2 - Implement rename-specific nodes (OriginalName, Counter, etc.)

See docs/NODE_EDITOR_INTEGRATION_PLAN.md for full roadmap.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,11 +86,12 @@ module = "oncutf.*"
 ignore_missing_imports = false
 
 # ============================================================
-# Tier 0 — Generated / auto files (NEVER check)
+# Tier 0 — Generated / auto files / external packages (NEVER check)
 # ============================================================
 [[tool.mypy.overrides]]
 module = [
-    "oncutf.utils.ui.fonts_rc"
+    "oncutf.utils.ui.fonts_rc",
+    "oncutf.ui.widgets.node_editor.*"
 ]
 ignore_errors = true
 
