--- a/requirements.txt
+++ b/requirements.txt
@@ -7,21 +7,18 @@ Pillow>=9.0.0
 charset-normalizer>=3.0.0
 psutil>=6.1.0
 aiofiles>=24.1.0
+typing_extensions>=4.0.0
 
 # --- Development dependencies ---
-# Install with: pip install -r requirements.txt[dev]
-# Or: pip install -e .[dev]
-
-# --- Test dependencies ---
-# pytest>=8.3.5
-# pytest-qt>=4.4.0
-# pytest-cov>=5.0.0
-# pytest-mock>=3.14.1
+pytest>=8.3.5
+pytest-qt>=4.4.0
+pytest-cov>=5.0.0
+pytest-mock>=3.14.1
 
 # --- Code quality tools ---
-# ruff>=0.3.0
-# mypy>=1.8.0
-# black>=24.0.0
+ruff>=0.3.0
+mypy>=1.8.0
+black>=24.0.0
 
 # --- Pre-commit hooks ---
-# pre-commit>=3.6.0
+pre-commit>=3.6.0
