fix: Add typing_extensions to pyproject.toml dependencies
typing_extensions is required for the @deprecated decorator used in:
- ApplicationContext.set_files()
- TextRemovalModule event handlers
- ProgressWidget._format_time()
- ColorColumnDelegate._set_file_color()

This dependency was already present in requirements.txt but missing
from pyproject.toml, causing ImportError on fresh installs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "Pillow>=9.0.0",
     "charset-normalizer>=3.0.0",
     "psutil>=6.1.0",
-    "aiofiles>=24.1.0"
+    "aiofiles>=24.1.0",
+    "typing_extensions>=4.0.0"
 ]
 
 [project.optional-dependencies]
