refactor: Update oncutf core, UI, and utilities with oncut branding consistency
- Update module docstrings and Author/Date headers across core services
- Refactor UI components and handlers following modern architecture patterns
- Update utility modules (svg_icon_generator, logger helpers)
- Align all modules with oncutf naming conventions (brand: oncut, product: oncutf)
- Maintain lowercase conventions throughout codebase
- Update test utilities and scripts with consistent formatting
- No functional changes, pure refactoring and standardization

--- a/resources/styles/main.qss.template
+++ b/resources/styles/main.qss.template
@@ -1,5 +1,5 @@
 /* =========================================
-   OnCutF - Main Application Stylesheet Template
+   oncutf - Main Application Stylesheet Template
    Theme: {{theme_name}} (auto-generated)
    ========================================= */
 
