--- a/resources/styles/main.qss.template
+++ b/resources/styles/main.qss.template
@@ -7,7 +7,7 @@
 QWidget {
     background-color: {{background}};
     color: {{text}};
-    font-family: "Inter", "Segoe UI", Arial, sans-serif;
+    font-family: {{global_font}};
     font-size: 9pt;
 }
 
@@ -18,6 +18,7 @@ QMenu {
     border: none;
     border-radius: 8px;
     padding: 6px 4px;
+    font-family: {{menu_font}};
 }
 
 QMenu::item {
@@ -52,6 +53,7 @@ QTableView {
     selection-background-color: {{table_selection_bg}};
     selection-color: {{table_selection_text}};
     border: 1px solid {{border}};
+    font-family: {{table_font}};
 }
 
 QTableView::item:hover {
@@ -84,6 +86,7 @@ QTreeView {
     selection-background-color: {{selected}};
     selection-color: {{selected_text}};
     border: 1px solid {{border}};
+    font-family: {{tree_font}};
 }
 
 QTreeView::item:hover {
