refactor: remove fonts_rc dead code
- Remove embedded fonts loading (_load_from_qresource method)
- Remove QResource fallback loading (dead code path)
- Remove fonts_rc import references (unused module)
- Remove generate_fonts_rc.py script and fonts_rc.pyi stub
- Remove fonts_rc from mypy config overrides
- Simplify InterFonts to only load from filesystem
- All fonts now use resources_rc.py via JetBrainsMonoFonts class

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ no_implicit_optional = true
 strict_equality = true
 show_error_codes = true
 pretty = true
-exclude = '(^|/)(backups|\.cache|temp|reports|scripts|examples)(/|$)|fonts_rc'
+exclude = '(^|/)(backups|\.cache|temp|reports|scripts|examples)(/|$)'
 check_untyped_defs = true
 
 [[tool.mypy.overrides]]
@@ -91,7 +91,7 @@ ignore_missing_imports = false
 # ============================================================
 [[tool.mypy.overrides]]
 module = [
-    "oncutf.utils.ui.fonts_rc",
+    "oncutf.ui.resources_rc",
     "oncutf.ui.widgets.node_editor.*"
 ]
 ignore_errors = true
