fix: exclude resources_rc.py from mypy via exclude pattern
- Add resources_rc.py to mypy exclude pattern (generated file, no type checking needed)
- Remove from module overrides (exclude pattern is cleaner)
- No ignore_missing_imports needed (file not checked at all)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ no_implicit_optional = true
 strict_equality = true
 show_error_codes = true
 pretty = true
-exclude = '(^|/)(backups|\.cache|temp|reports|scripts|examples)(/|$)'
+exclude = '(^|/)(backups|\.cache|temp|reports|scripts|examples)(/|$)|oncutf/ui/resources_rc\.py'
 check_untyped_defs = true
 
 [[tool.mypy.overrides]]
