Add QToolButton styling for viewport toggle buttons
- Add comprehensive QToolButton QSS rules to theme template
- Define hover state: button_hover_bg background + border
- Define pressed state: button_pressed_bg background
- Define checked state: selected background + outline border
- Define checked:hover state: selected_hover background

Visual improvements:
- Buttons now show hover feedback (subtle highlight)
- Pressed state provides click feedback
- Checked state clearly indicates active viewport
- Smooth transitions between states

Note: TooltipHelper already in use (layout_controller.py:336)
No QSingleShot usage in viewport code (only in shutdown lifecycle)

--- a/resources/styles/main.qss.template
+++ b/resources/styles/main.qss.template
@@ -419,6 +419,34 @@ QLabel[class="SuccessTooltip"] {
     border-radius: 6px;
 }
 
+/* ===== QToolButton (Viewport Toggle Buttons) ===== */
+QToolButton {
+    background-color: transparent;
+    color: {{text}};
+    border: 1px solid transparent;
+    border-radius: 4px;
+    padding: 2px;
+}
+
+QToolButton:hover {
+    background-color: {{button_hover_bg}};
+    border-color: {{border}};
+}
+
+QToolButton:pressed {
+    background-color: {{button_pressed_bg}};
+}
+
+QToolButton:checked {
+    background-color: {{selected}};
+    border-color: {{outline}};
+}
+
+QToolButton:checked:hover {
+    background-color: {{selected_hover}};
+    border-color: {{outline}};
+}
+
 /* ===== QSplitter ===== */
 QSplitter::handle {
     background-color: {{border}};
