Fix thumbnail viewport runtime errors and add RAW support
- Install rawpy for RAW image thumbnail generation (CR2, CR3, NEF, ORF, RW2, ARW, DNG, RAF, PEF, SRW)
- Fix MTS video duration parsing (handle multiple lines from ffprobe)
- Add MTS/M2TS/MXF to VideoThumbnailProvider supported extensions
- Add failed_files tracking to prevent duplicate warning spam
- Reduce duplicate logging (worker debug, manager warning only)
- Fix thumbnail viewport selection sync with rename preview
- Add placeholder when thumbnail viewport is empty
- Fix clear_pending_requests to clean failed files set

All tests pass (1190 passed, 7 skipped)

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer>=3.0.0
 psutil>=6.1.0
 aiofiles>=24.1.0
 typing_extensions>=4.0.0
+rawpy>=0.21.0
 
 # --- Development dependencies ---
 pytest>=8.3.5
