--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "charset-normalizer>=3.0.0",
     "psutil>=6.1.0",
     "aiofiles>=24.1.0",
-    "typing_extensions>=4.0.0"
+    "typing_extensions>=4.0.0",
+    "rawpy>=0.21.0",
 ]
 
 [project.optional-dependencies]
